(10.12.2022-18h25) Correction div pour animation + bouton commander

--- a/html/rest4.html
+++ b/html/rest4.html
@@ -20,70 +20,132 @@
         <h1 class="restau__header__title">ohmyfood</h1>
     </header>
 
-    <main class="restau--bckgrd">
-        <section class="restau__img "></section>
-        <header class="restau__name">
-            <h1 class="restau__name__title">Le délice des sens</h1>
-            <div class="heart__icon restau__icon"><i class="heart__icon__fa restau__heart fa-regular fa-heart"></i></div>
-        </header>
-        <section class="restau__section">
-            <h2 class="restau__section__title">Entrées</h2>
-            <div class="restau__underline"></div>
-            <div class="restau__card restau__card__1">
-                <h3 class="restau__card__title">Tartare de thon</h3>
-                <div class="restau__card__text">Assaisonné au yuzu<span class="restau__card__price">25€</span></div>
-                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
-            </div>
-            <div class="restau__card restau__card__2">
-                <h3 class="restau__card__title">Bouchée de homard croustillant</h3>
-                <div class="restau__card__text">Et sa farandole de petits légumes<span class="restau__card__price">35€</span>
+    <main>
+        <div class="restau__img--4 "></div>
+
+        <div class="restau--bckgrd">
+            <div class="restau__name">
+                <h1 class="restau__name__title">Le délice des sens</h1>
+                <div class="heart__icon restau__icon"><i class="heart__icon__fa restau__heart fa-regular fa-heart"></i>
                 </div>
-                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
             </div>
-            <div class="restau__card restau__card__3">
-                <h3 class="restau__card__title">Velouté de cèpes</h3>
-                <div class="restau__card__text">Aux truffes<span class="restau__card__price">20€</span></div>
-                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
-            </div>
+            <section class="restau__section">
+                <div class="restau__section__header">
+                    <h2 class="restau__section__title">Entrées</h2>
+                    <div class="restau__section__underline"></div>
+                </div>
+                <div class="restau--row">
+                    <div class="restau__card restau__card__1">
+                        <div class="restau__card__content">
+                            <h3 class="restau__card__title">Tartare de thon</h3>
+                            <p class="restau__card__text">Assaisonné au yuzu</p>
+                        </div>
+                        <div class="restau__card__price">25€</div>
+                        <div class="restau__animation">
+                            <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                        </div>
+                    </div>
+                    <div class="restau__card restau__card__2">
+                        <div class="restau__card__content">
+                            <h3 class="restau__card__title">Bouchée de homard croustillant</h3>
+                            <div class="restau__card__text">Et sa farandole de petits légumes</div>
+                        </div>
+                        <div class="restau__card__price">35€</div>
+                        <div class="restau__animation">
+                            <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                        </div>
+                    </div>
+                    <div class="restau__card restau__card__3">
+                        <div class="restau__card__content">
+                            <h3 class="restau__card__title">Velouté de cèpes</h3>
+                            <div class="restau__card__text">Aux truffes</div>
+                        </div>
+                        <div class="restau__card__price">20€</div>
+                        <div class="restau__animation">
+                            <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="restau__section">
+                <div class="restau__section__header">
+                    <h2 class="restau__section__title">Plats</h2>
+                    <div class="restau__section__underline"></div>
+                </div>
+                <div class="restau--row">
+                    <div class="restau__card restau__card__4">
+                        <div class="restau__card__content">
+                            <h3 class="restau__card__title">Poulet rôti aux herbes de Provence</h3>
+                            <div class="restau__card__text">Et sa crème de truffe</div>
+                        </div>
+                        <div class="restau__card__price">40€</div>
+                        <div class="restau__animation">
+                            <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="restau__card restau__card__5">
+                    <div class="restau__card__content">
+                        <h3 class="restau__card__title">Langouste rôtie</h3>
+                        <div class="restau__card__text">Et ses légumes de saison</div>
+                    </div>
+                    <div class="restau__card__price">35€</div>
+                    <div class="restau__animation">
+                        <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                    </div>
+                </div>
+                <div class="restau__card restau__card__6">
+                    <div class="restau__card__content">
+                        <h3 class="restau__card__title">Côte de boeuf Angus</h3>
+                        <div class="restau__card__text">Et sa purée de panais</div>
+                    </div>
+                    <div class="restau__card__price">44€</div>
+                    <div class="restau__animation">
+                        <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                    </div>
+                </div>
+        </div>
         </section>
         <section class="restau__section">
-            <h2 class="restau__section__title">Plats</h2>
-            <div class="restau__underline"></div>
-            <div class="restau__card restau__card__4">
-                <h3 class="restau__card__title">Poulet rôti aux herbes de Provence</h3>
-                <div class="restau__card__text">Et sa crème de truffe<span class="restau__card__price">40€</span></div>
-                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
+            <div class="restau__section__header">
+                <h2 class="restau__section__title">Desserts</h2>
+                <div class="restau__section__underline"></div>
             </div>
-            <div class="restau__card restau__card__5">
-                <h3 class="restau__card__title">Langouste rôtie</h3>
-                <div class="restau__card__text">Et ses légumes de saison<span class="restau__card__price">35€</span></div>
-                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
+            <div class="restau--row">
+                <div class="restau__card restau__card__7">
+                    <div class="restau__card__content">
+                        <h3 class="restau__card__title">Farandole de desserts</h3>
+                        <div class="restau__card__text">Du chef</div>
+                    </div>
+                    <div class="restau__card__price">18€</div>
+                    <div class="restau__animation">
+                        <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                    </div>
+                </div>
+                <div class="restau__card restau__card__8">
+                    <div class="restau__card__content">
+                        <h3 class="restau__card__title">Crème brulée</h3>
+                        <div class="restau__card__text">Revisitée</div>
+                    </div>
+                    <div class="restau__card__price">22€</div>
+                    <div class="restau__animation">
+                        <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                    </div>
+                </div>
+                <div class="restau__card restau__card__9">
+                    <div class="restau__card__content">
+                        <h3 class="restau__card__title">Millefeuille croustillant</h3>
+                        <div class="restau__card__text">Myrtilles et pâte d’amande</div>
+                    </div>
+                    <div class="restau__card__price">23€</div>
+                    <div class="restau__animation">
+                        <i class="restau__animation__icon fa-regular fa-circle-check"></i>
+                    </div>
+                </div>
             </div>
-            <div class="restau__card restau__card__6">
-                <h3 class="restau__card__title">Côte de boeuf Angus</h3>
-                <div class="restau__card__text">Et sa purée de panais<span class="restau__card__price">44€</span></div>
-                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
-            </div>
+            <div class="restau__button"><button class="restau__button__purple button__purple">Commander</button></div>
         </section>
-        <section class="restau__section">
-            <h2 class="restau__section__title">Desserts</h2>
-            <div class="restau__underline"></div>
-            <div class="restau__card restau__card__7">
-                <h3 class="restau__card__title">Farandole de desserts</h3>
-                <div class="restau__card__text">Du chef<span class="restau__card__price">18€</span></div>
-                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
-            </div>
-            <div class="restau__card restau__card__8">
-                <h3 class="restau__card__title">Crème brulée</h3>
-                <div class="restau__card__text">Revisitée<span class="restau__card__price">22€</span></div>
-                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
-            </div>
-            <div class="restau__card restau__card__9">
-                <h3 class="restau__card__title">Millefeuille croustillant</h3>
-                <div class="restau__card__text">Myrtilles et pâte d’amande<span class="restau__card__price">23€</span></div>
-                <div class="restau__animation"><i class="restau__animation__icon fa-regular fa-circle-check"></i></div>
-            </div>
-        </section>
+        </div>
     </main>
 
     <footer class="footer">
